# StarGateEmu-Projekt

./: CMakeLists.txt  Core-Changelog.txt  PreLoad.cmake  revision.h.in.cmake
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc  resource.h
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h
src/server/authserver/PrecompiledHeaders/: authPCH.cpp  authPCH.h
src/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h  RealmSocket.cpp  RealmSocket.h
src/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  CMakeLists.txt  VMapDefinitions.h  VMapTools.h
src/server/collision/Management/: IVMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/server/collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/server/collision/Models/: ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/server/collision/PrecompiledHeaders/: collisionPCH.cpp  collisionPCH.h
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/Addons/: AddonMgr.cpp  AddonMgr.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/Battlegrounds/: ArenaTeam.cpp  ArenaTeam.h  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.cpp  BattlegroundQueue.h
src/server/game/Calendar/: Calendar.h
src/server/game/Chat/: Chat.cpp  Chat.h
src/server/game/Combat/: HostileRefManager.cpp  HostileRefManager.h  ThreatManager.cpp  ThreatManager.h  UnitEvents.h
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h  DisableMgr.cpp  DisableMgr.h
src/server/game/DataStores/: DB2Stores.cpp  (+9 more)
src/server/scripts/: CMakeLists.txt
src/server/shared/: CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  resource.h  worldserver.conf.dist  worldserver.rc
(+1088 files in other folders)
